fix(mediafusion): Deleting Hybrid Media cluster: Flickering between different flows in large orgs
Deleting Hybrid Media cluster: Flickering between different flows in large orgs

--- a/app/modules/mediafusion/media-service-v2/delete-cluster/_deletecluster.scss
+++ b/app/modules/mediafusion/media-service-v2/delete-cluster/_deletecluster.scss
@@ -51,3 +51,8 @@
   position: inherit;
   width: 100%;
 }
+.remove-cluster-spinner {
+  text-align: center;
+  height: 100%;
+  width: 100%;
+}
